# wave

./: CMakeLists.txt  README.md
include/: direction.h  generator.h  observer.h  wave.h
src/: generator.cpp  main.cpp  observer.cpp  wave.cpp
